# Micha-Engine

./: .gitignore  About.txt  CMakeLists.txt  README.md  imgui.ini  log.txt  main.cpp
.cache/clangd/index/: FileManager.cpp.E319864205689F70.idx  FileManager.h.1F37ED46A090DB81.idx  KeyboardManager.cpp.862473F590F2B337.idx  KeyboardManager.h.971990F5F6FB0D81.idx  Logger.cpp.254B6742C434A1C8.idx  Logger.h.9D5AB173F1179C08.idx  ResourceLoader.cpp.0B94562F29D03D60.idx  ResourceLoader.h.2085BCC3DA4D20DB.idx  main.cpp.2EEC4D859F7BF050.idx
MichaEngine/: Todo
MichaEngine/cmake/: imgui.cmake
MichaEngine/include/: Engine.h  Executable.h  FileManager.h  InternalWindow.h  KeyboardManager.h  Logger.h  MichaApp.h  ObjectManager.h  ResourceLoader.h  SDLDeleter.h  Types.h  WindowManager.h
MichaEngine/source/: CMakeLists.txt  Engine.cpp  Executable.cpp  FileManager.cpp  InternalWindow.cpp  KeyboardManager.cpp  Logger.cpp  MichaApp.cpp  ObjectManager.cpp  ResourceLoader.cpp  Types.cpp  WindowManager.cpp
assets/: settings.ini
cmake/: FindSDL2TTF.cmake
debug-build/: CMakeCache.txt  Game  Makefile  cmake_install.cmake
debug-build/MichaEngine/source/: Makefile  cmake_install.cmake
include/: FileManager.h  Game.h  KeyboardManager.h  Logger.h  Object.h  Objects.h  Types.h  WindowManager.h
source/: CMakeLists.txt  FileManager.cpp  Game.cpp  KeyboardManager.cpp  Logger.cpp  Object.cpp  Objects.cpp  ResourceLoader.cpp  Types.cpp  WindowManager.cpp  main.cpp
